[tool.poetry]
name = "wsl-manager"
version = "1.1.0"
description = "An easy way to maintain your WSL distros"
authors = ["Lorhan Sohaky <contato+gi74@lorhan.me>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src/wsl_manager" }]

[tool.poe.tasks]
fix = "pre-commit run --all-files"
build = "cxfreeze src\\wsl_manager\\main.py --target-name=wsl-manager  -c --target-dir=build"
copy_files = [
    { shell = "Copy-Item 'README.md' -Destination 'build\\README.md'", interpreter = "powershell" },
    { shell = "Copy-Item 'LICENSE.md' -Destination 'build\\LICENSE.md'", interpreter = "powershell" },
]
generate_zip = [
    { shell = "Compress-Archive -Path 'build\\*' -DestinationPath 'wsl-manager.zip'", interpreter = "powershell" },
]
release = ["build", "copy_files", "generate_zip"]


[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.3.1"
chardet = "^5.1.0"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
black = "^23.1.0"
poethepoet = "^0.18.1"
cx-freeze = "^6.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
